<resources>
    <string name="app_name">GreenQuest</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profiles">Profiles</string>
    <string name="greetings_name">Halo, Ray!</string>
    <string name="greetings_question">sudah buang sampah hari ini?</string>
    <string name="misi_title">Hai Quessers, ayo lanjutkan misimu!</string>
    <string name="title_quest_hari_ini">Quest Hari Ini!</string>
    <string name="username">Ray</string>
    <string name="points_count">1356 points</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="peringkat">Yuk, cek peringkat teratas saat ini</string>
    <string name="progressmu_sampai_mana">Progressmu sampai mana?</string>

    <string name="btn_scan">Scan</string>

    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>

    <string name="failed">Error on model TFLite</string>

    <string name="cek_leaderboard">cek leaderboard</string>
    <string name="lihat">lihat</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="ray">Ray</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="reset_string_btn">Reset Scan</string>
    <string name="scan_btn">Selesai Scan</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Hey, berjumpa lagi! Apa kabarmu?</string>
    <string name="register">Register</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="desc_logo_greenquest">Logo Greenquest</string>
    <string name="quest_complete">Anda sudah menyelesaikan semua quest hari ini</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="text_objective">Objective: Scan</string>
    <string name="done_quiz">Selesai</string>
    <string name="point_leadderboard">100</string>
    <string name="username_leaderboard">Username User</string>
    <string name="progress_home">0%</string>
    <string name="btnMissionText">riwayat</string>
    <string name="text_cek_leaderboard">cek leaderboard</string>
    <string name="lihat_profile_btn">lihat</string>
    <string name="start_btn_text">mulai</string>
    <string name="semua_misimu_yang_telah_selesai">Semua misimu yang telah selesai</string>
</resources>