<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.greenquest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_leaderboard"
            app:destination="@id/navigation_leaderboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_profiles"
            app:destination="@id/navigation_profiles" />
    </fragment>

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.dicoding.greenquest.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_leaderboard" >
        <action
            android:id="@+id/action_navigation_leaderboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_leaderboard_to_navigation_profiles"
            app:destination="@id/navigation_profiles" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profiles"
        android:name="com.dicoding.greenquest.ui.profile.ProfilesFragment"
        android:label="@string/title_profiles"
        tools:layout="@layout/fragment_profiles" >
        <action
            android:id="@+id/action_navigation_profiles_to_navigation_leaderboard"
            app:destination="@id/navigation_leaderboard" />
        <action
            android:id="@+id/action_navigation_profiles_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>