<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFAE0"
    tools:context=".ui.home.HomeFragment">

    <!-- ImageView untuk logo Greenquest -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/greenquest_logo_edited_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- CircleImageView untuk avatar -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        tools:src="@tools:sample/avatars" />

    <!-- TextView untuk salam -->
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        android:fontFamily="@font/gabarito_bold"
        android:text="@string/greetings_name"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
        app:layout_constraintVertical_bias="0.0" />

    <!-- TextView untuk pertanyaan -->
    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        android:fontFamily="@font/gabarito_regular"
        android:text="@string/greetings_question"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <View
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:background="@drawable/blur_circle"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <!-- View untuk bottom sheet -->
    <View
        android:id="@+id/view"
        android:layout_width="415dp"
        android:layout_height="580dp"
        android:elevation="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/congratsPeringkat"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:elevation="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_misi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvMisiTitle"
        android:layout_width="212dp"
        android:layout_height="88dp"
        android:layout_marginStart="32dp"
        android:elevation="12dp"
        android:fontFamily="@font/gabarito_bold"
        android:gravity="center_vertical"
        android:text="@string/misi_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/congratsPeringkat"
        app:layout_constraintEnd_toEndOf="@+id/congratsPeringkat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/congratsPeringkat"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/tvQuestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="12dp"
        android:fontFamily="@font/gabarito_bold"
        android:text="@string/title_quest_hari_ini"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="12dp"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="#3f51b5"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        app:layout_constraintBottom_toBottomOf="@+id/congratsPeringkat"
        app:layout_constraintEnd_toEndOf="@+id/congratsPeringkat"
        app:layout_constraintStart_toEndOf="@+id/tvMisiTitle"
        app:layout_constraintTop_toTopOf="@+id/congratsPeringkat"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:elevation="12dp"
        android:fontFamily="@font/gabarito_medium"
        android:text="lihat"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsPeringkat" />

</androidx.constraintlayout.widget.ConstraintLayout>