<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FEFAE0">

        <!-- ImageView untuk logo Greenquest -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="151dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            android:src="@drawable/greenquest_logo_edited_transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!-- CircleImageView untuk avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106"
            tools:src="@tools:sample/avatars" />

        <!-- TextView untuk salam -->
        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            android:fontFamily="@font/gabarito_bold"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/points_background"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/points_background"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/half_circle"
            android:layout_width="590dp"
            android:layout_height="330dp"
            android:layout_gravity="center"
            android:elevation="2dp"
            android:background="@drawable/half_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/points_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:elevation="4dp"
            android:fontFamily="@font/gabarito_bold"
            android:text="@string/points_count"
            android:textColor="#143B21"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/informasi_pribadi"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/informasi_pribadi_background"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/half_circle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_title_info_pribadi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:elevation="4dp"
            android:fontFamily="@font/gabarito_medium"
            android:text="@string/informasi_pribadi"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/informasi_pribadi"
            app:layout_constraintEnd_toEndOf="@+id/informasi_pribadi"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/informasi_pribadi"
            app:layout_constraintTop_toTopOf="@+id/informasi_pribadi"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/congrats_peringkat"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/card_misi"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/informasi_pribadi"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_title_congrats_peringkat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:elevation="4dp"
            android:fontFamily="@font/gabarito_medium"
            android:text="@string/selamat_kamu_naik_peringkat"
            android:textColor="#FFE7EF"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/congrats_peringkat"
            app:layout_constraintEnd_toEndOf="@+id/congrats_peringkat"
            app:layout_constraintStart_toStartOf="@+id/congrats_peringkat"
            app:layout_constraintTop_toTopOf="@+id/congrats_peringkat"
            app:layout_constraintVertical_bias="0.65" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#CAED72"
            android:elevation="4dp"
            android:fontFamily="@font/gabarito_medium"
            android:text="cek leaderboard"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:translationZ="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/congrats_peringkat"
            app:layout_constraintEnd_toEndOf="@+id/congrats_peringkat"
            app:layout_constraintStart_toStartOf="@+id/congrats_peringkat"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_congrats_peringkat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>